Fixed some layout issues

--- a/image.css
+++ b/image.css
@@ -8,32 +8,13 @@ img {
     margin: 1.66%
 }
 
-.logo {
-    /* font-family: */
+/* .logo {
+    font-family:
     margin-left: 1.66%;
     font-size: 20px;
     font-weight: bold;
     border-bottom: 2px solid red;
     width: 30%;
     padding-bottom: 10px;
-}
+} */
 
-a {
-    text-decoration: none;
-}
-
-a:visited {
-    color: black;
-}
-
-.footer {
-    position: relative;
-    bottom: 0;
-
-}
-
-.footer p {
-    position: relative;
-    right: 16.66%;
-    font-size: 12px;
-}
